Catalog page classes added, footer classes corrected, aligner CSS display:flex temporary disabled

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -80,7 +80,7 @@ a {
 }
 
 .aligner {
-  display: flex;
+  /* display: flex; */
   width: 1160px;
   margin: 0 auto;
   padding: 0 20px;
